--- a/app-bines-raices/package.json
+++ b/app-bines-raices/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "firebase": "^10.7.1",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
+    "uid": "^2.0.2",
     "vee-validate": "^4.12.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
