--- a/app-salon-barberia/backend-app-salon/package.json
+++ b/app-salon-barberia/backend-app-salon/package.json
@@ -5,7 +5,9 @@
   "description": "Backend para App-Salon en MEVN",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "seed:import": "node data/seed.js --import",
+    "seed:destroy": "node data/seed.js --destroy"
   },
   "author": "Jhan Carlos Acuña Ordoñez",
   "license": "ISC",
