--- a/app-salon-barberia/frontend-app-salon/package.json
+++ b/app-salon-barberia/frontend-app-salon/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/themes": "^1.4.0",
+    "@formkit/vue": "^1.4.0",
     "axios": "^1.6.5",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.3.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "vue-tailwind-datepicker": "^1.6.1"
+    "vue-tailwind-datepicker": "^1.6.1",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
