--- a/app-salon-barberia/frontend-app-salon/package.json
+++ b/app-salon-barberia/frontend-app-salon/package.json
@@ -13,6 +13,7 @@
     "@formkit/vue": "^1.4.0",
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
+    "flowbite-vue": "^0.1.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
