--- a/appsalon_mevn/backend/.env
+++ b/appsalon_mevn/backend/.env
@@ -1,9 +1,9 @@
-MONGO_URI = mongodb+srv://jcacunainge:WaC1f5H0F7PFkKcf@cluster0.ygk3ts0.mongodb.net/appsalon_mevn
+MONGO_URI = mongodb+srv://jcacunainge:0nYjwrvZSnrEoNhH@clustermenv.5ot9q.mongodb.net/barberia
 FRONTEND_URL = http://localhost:5173
 
 EMAIL_HOST = sandbox.smtp.mailtrap.io
 EMAIL_PORT = 2525
-EMAIL_USER = 9a34ce89a263b6
-EMAIL_PASSWORD = 61456850076cbb
+EMAIL_USER = f8395b22b1d904
+EMAIL_PASSWORD = 775ed9c4ec39f4
 
 JWT_SECRET = jwt_secret_key
