--- a/appsalon_mevn/backend/package.json
+++ b/appsalon_mevn/backend/package.json
@@ -25,6 +25,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
-    "nodemailer": "^6.9.2"
+    "nodemailer": "^6.9.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
